--- a/leetcode-study/pom.xml
+++ b/leetcode-study/pom.xml
@@ -55,6 +55,12 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.6</version>
         </dependency>
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.10</version>
+        </dependency>
     </dependencies>
 
     <build>
